--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "antd": "^3.20.1",
+    "antd-mobile": "^2.2.14",
+    "rc-form": "^2.4.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
